[package]
name = "ULPExtractor"
version = "0.1.0"
edition = "2021"
description = "A fast, multithreaded credential extractor with advanced filtering and GUI, supporting large files."

[dependencies]
regex = "1"
rayon = "1"
rfd = "0.14"
eframe = { version = "0.27", features = ["wgpu"] }
num_cpus = "1.16"